refactor style.css

--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,6 @@ a:active {
     outline: 0;
 }
 
-b,
-strong {
-    font-weight: bold;
-}
-
 pre,
 code {
     font-family: monospace, monospace;
@@ -71,18 +66,18 @@ header {
     color: #C90B0B;
 }
 
-header img {
+.headshot {
     border-radius: 40px;
     float: left;
 }
 
-header p {
-    font-size:1.5em;
+.name {
     font-weight: bold;
+    font-size:1.5em;
     padding-left: 4em;
 }
 
-header p span {
+.job-title {
     font-size: 0.8em;
     font-weight: normal;
 }
@@ -99,19 +94,18 @@ header p span {
     padding: 1em 1em;
 }
 
-.content li {
+ul {
     list-style-type: none;
     font-size: 1.1em;
 }
 
-li img {
+.project-img {
     float:left
     padding-right: 1em
 }
 
-li p {
+.project-desc {
     font-size: 0.9em;
-    font-style: italic;
 }
 
 footer {
@@ -119,7 +113,7 @@ footer {
   border-top: 1px solid #ccc;
 }
 
-footer span {
+#crp-stats {
     float: right;
     font-style: italic;
 }
@@ -127,5 +121,5 @@ footer span {
 /* Smartphones (portrait) */
 @media only screen and (max-width: 480px) {
   body { font-size: 12px;}
-  header p { padding-left: 4.5em;}
+  .name { padding-left: 4.5em;}
 }
