--- a/dev/views/pizza.html
+++ b/dev/views/pizza.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/pizza_style.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
