--- a/dev/views/pizza.html
+++ b/dev/views/pizza.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
-  <link rel="stylesheet" href="css/pizza_style.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <link rel="stylesheet" href="./css/pizza_style.css">
+  <link rel="stylesheet" href="./css/bootstrap-grid.css">
 </head>
 
 <body>
@@ -137,7 +137,7 @@
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
 </html>
