add backface-visibility hidden hack to moving pizzas, minor renamings on main.js'

--- a/dev/views/pizza.html
+++ b/dev/views/pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-<head>  
+<head>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0">
   <link rel="stylesheet" href="./css/pizza_style.css">
   <link rel="stylesheet" href="./css/bootstrap-grid.css">
 </head>
