--- a/dev/views/css/pizza_style.css
+++ b/dev/views/css/pizza_style.css
@@ -31,6 +31,8 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  transform: translateZ(0);
+  backface-visibility: hidden;
 }
 
 .randomPizzaContainer {
